--- a/QR-Code/index.html
+++ b/QR-Code/index.html
@@ -20,11 +20,10 @@
                 <div class="divProperties">
                     <img class="imgProperties" src="./image/image-qr-code.png" alt="QR Code" />
                     <h2 class="h2Properties">
-                            Improve your front-end  <br> skills by building projects
+                            Improve your front-end <br> skills by building projects
                     </h2>
                     <p class="pProperties">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
+                            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
                     </p>
                 </div>
             </body>
